tooling/nargo_cli/tests/snapshots/compile_failure/dup_trait_items_1/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused trait MyTrait
  ┌─ src/main.nr:1:7
  │
1 │ trait MyTrait {
  │       ------- unused trait
  │

error: Duplicate definitions of trait associated function with name SomeFunc found
  ┌─ src/main.nr:2:6
  │
2 │   fn SomeFunc();
  │      -------- First trait associated function found here
3 │   fn SomeFunc();
  │      -------- Second trait associated function found here
  │

Aborting due to 1 previous error
