tooling/nargo_cli/tests/snapshots/compile_failure/dup_trait_items_1/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused trait MyTrait
  ┌─ src/main.nr:1:7
  │
1 │ trait MyTrait {
  │       ------- unused trait
  │

error: Duplicate definitions of trait associated item with name SomeFunc found
  ┌─ src/main.nr:2:6
  │
2 │   fn SomeFunc();
  │      -------- First definition found here
3 │   fn SomeFunc();
  │      -------- Second definition found here
  │

error: Duplicate definitions of trait associated item with name SomeFunc found
  ┌─ src/main.nr:2:6
  │
2 │   fn SomeFunc();
  │      -------- First definition found here
3 │   fn SomeFunc();
  │      -------- Second definition found here
  │

Aborting due to 2 previous errors
